# CasperLabs-EIP1337

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  commandsfordeployment
casper-contract-eip-1337/: .travis.yml  Cargo.toml
casper-contract-eip-1337/src/: constants.rs  contract.rs  hashes.rs  lib.rs  utils.rs
scripts/: base64_key.sh
subscription_hash_signer/: Cargo.toml
subscription_hash_signer/src/: der.rs  signer.rs
subscription_hash_signer/src/der/: errors.rs
tests/: Cargo.toml
tests/erc-20-wasm/: erc-20-e973bb5.wasm
tests/src/: integration_tests.rs  utils.rs
