[package]
name = "casper-contract-eip-1337"
version = "0.1.0"
authors = ["https://github.com/davidtai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.3.2" }
types = { package = "casper-types", version="1.3.2" }
erc20 = { package ="casper-erc20", version="0.2.0" }
renvm-sig = "0.1.1"
cryptoxide = "0.3.3"
hex = "0.4.3"

[[bin]]
name = "casper-contract-eip-1337"
path = "src/contract.rs"
bench = false
doctest = false
test = false

[features]
default = ["erc20/std", "contract/std", "types/std"]

[profile.release]
lto = true
