[package]
name = "subscription_hash_signer"
version = "0.1.0"
authors = ["https://github.com/davidtai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.38"
ed25519-dalek = "1.0.1"
types = { package = "casper-types", version="=1.3.2" }
derp = "0.0.14"
untrusted = "=0.7.1"

base64 = "*"
hex = "0.4.3"
pem = "1.0.1"
signature = "*"
thiserror = "*"

[[bin]]
name = "subscription_hash_signer"
path = "src/signer.rs"
bench = false
doctest = false
test = false

[profile.release]
lto = true
